--- a/HemenBiletProje/Views/Home/Index.cshtml
+++ b/HemenBiletProje/Views/Home/Index.cshtml
@@ -1,33 +1,28 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Uçuş Arama";
+    // Örnek şehir listesi. Gerçek uygulamanızda bunu veritabanından alabilirsiniz.
+    var cities = new List<string> { "İstanbul", "Ankara", "İzmir", "Antalya", "Bursa" };
 }
 
-<main>
-    <section class="row" aria-labelledby="aspnetTitle">
-        <h1 id="title">ASP.NET</h1>
-        <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-        <p><a href="https://asp.net" class="btn btn-primary btn-md">Learn more &raquo;</a></p>
-    </section>
+<div class="container" style="width: 50%; margin-top: 50px;">
+    <h2 style="text-align: center; color: #5a5a5a;">Uçuş Arama</h2>
 
-    <div class="row">
-        <section class="col-md-4" aria-labelledby="gettingStartedTitle">
-            <h2 id="gettingStartedTitle">Getting started</h2>
-            <p>
-                ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-                enables a clean separation of concerns and gives you full control over markup
-                for enjoyable, agile development.
-            </p>
-            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-        </section>
-        <section class="col-md-4" aria-labelledby="librariesTitle">
-            <h2 id="librariesTitle">Get more libraries</h2>
-            <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-        </section>
-        <section class="col-md-4" aria-labelledby="hostingTitle">
-            <h2 id="hostingTitle">Web Hosting</h2>
-            <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-        </section>
-    </div>
-</main>
+    <form method="post" action="@Url.Action("Search", "Flight")">
+        <div class="form-group">
+            <label for="From" class="control-label">Nereden</label>
+            @Html.DropDownList("From", new SelectList(cities), "-- Kalkış Şehri Seç --", new { @class = "form-control" })
+        </div>
+
+        <div class="form-group">
+            <label for="To" class="control-label">Nereye</label>
+            @Html.DropDownList("To", new SelectList(cities), "-- Varış Şehri Seç --", new { @class = "form-control" })
+        </div>
+
+        <div class="form-group">
+            <label for="Date" class="control-label">Tarih</label>
+            @Html.TextBox("Date", null, new { @class = "form-control", placeholder = "YYYY-MM-DD", type = "date" })
+        </div>
+
+        <button type="submit" class="btn btn-primary" style="width: 100%; margin-top: 20px;">Arama Yap</button>
+    </form>
+</div>
