light list page and payment page added.

--- a/HemenBiletProje/Views/Shared/_Layout.cshtml
+++ b/HemenBiletProje/Views/Shared/_Layout.cshtml
@@ -3,39 +3,11 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - HemenBilet Projesi</title>
+    <title>@ViewBag.Title Uçuşları Listele </title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
-        <div class="container">
-            @Html.ActionLink("HemenBilet Projesi", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Toggle navigation" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
-                <ul class="navbar-nav flex-grow-1">
-                    <li>@Html.ActionLink("Anasayfa", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Hakkında", "About", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("İletişim", "Contact", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-
-                    @* Giriş ve Kayıt Linkleri *@
-                    @if (Session["UserId"] == null)
-                    {
-                        <li>@Html.ActionLink("Giriş Yap", "Login", "User", new { area = "" }, new { @class = "nav-link" })</li>
-                        <li>@Html.ActionLink("Kayıt Ol", "Signup", "User", new { area = "" }, new { @class = "nav-link" })</li>
-                    }
-                    else
-                    {
-                        @* Kullanıcı giriş yaptıysa çıkış bağlantısı gösterilir *@
-                        <li>@Html.ActionLink("Çıkış Yap", "Logout", "User", new { area = "" }, new { @class = "nav-link" })</li>
-                    }
-                </ul>
-            </div>
-        </div>
-    </nav>
     <div class="container body-content">
         @RenderBody()
         <hr />
@@ -47,5 +19,7 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+    <li>@Html.ActionLink("Ana Sayfa", "FlightSearchPage", "Flight", new { area = "Admin" }, new { @class = "nav-link" })</li>
+
 </body>
 </html>
