--- a/HemenBiletProje/Views/Account/Login.cshtml
+++ b/HemenBiletProje/Views/Account/Login.cshtml
@@ -234,7 +234,7 @@
                     <input type="password" id="registerPassword" name="registerPassword" required>
                 </div>
                 <div class="form-group">
-                    <label for="confirmPassword">Şifre (Tekrar)</label>
+                    <label for="confirmPassword">Şifre Tekrar</label>
                     <input type="password" id="confirmPassword" name="confirmPassword" required>
                 </div>
                 <div class="modal-footer">
