--- a/HemenBiletProje/Views/Flight/FlightSearchPage.cshtml
+++ b/HemenBiletProje/Views/Flight/FlightSearchPage.cshtml
@@ -17,7 +17,7 @@
             <h1>hemenbilet</h1>
             <div class="header-links">
                 <a href="/Contact">İletişim</a>
-                <a href="/Account/Login">Giriş Yap</a> <!-- Giriş Yap Butonu -->
+                <a href="/Login/Login">Giriş Yap</a> <!-- Giriş Yap Butonu -->
             </div>
         </div>
     </header>
