--- a/HemenBiletProje/Views/Shared/_Layout.cshtml
+++ b/HemenBiletProje/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
-    <li>@Html.ActionLink("Ana Sayfa", "FlightSearchPage", "Flight", new { area = "Admin" }, new { @class = "nav-link" })</li>
+    <link>@Html.ActionLink("Ana Sayfa", "FlightSearchPage", "Flight", new { area = "Admin" }, new { @class = "nav-link" })</link>
 
 </body>
 </html>
