--- a/HemenBiletProje/Views/Register/SignUp.cshtml
+++ b/HemenBiletProje/Views/Register/SignUp.cshtml
@@ -117,7 +117,8 @@
 
             <button type="submit" class="btn-primary">Kayıt Ol</button>
 
-            <a href="/Login">Zaten hesabınız var mı? Giriş Yap</a>
+
+            <a href="/Login/Login">Zaten hesabınız var mı? Giriş Yap</a>
         </form>
     </div>
 
